--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "covid-tracker",
+  "name": "covid19-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
-    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
-    "react-chartjs-2": "^2.9.0",
+    "react-chartjs2": "^1.2.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
